--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/project-track-edit-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/project-track-edit-form.html.twig
@@ -51,7 +51,7 @@
               <a href="{{ url('entity.webform_submission.edit_form', {
                 webform: 'complexity_uncertainty_default',
                 webform_submission: projectTrackTool.getToolId,
-                'destination': form['#action']
+                destination: form['#action']
               }) }}" class="inline-block btn-primary bg-black text-white hover:bg-stone-700">
                 <i class="fa-solid fa-pencil"></i><span class="ml-3">{{ 'Edit'|t }}</span>
               </a>
