--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/node-edit-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/node-edit-form.html.twig
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-slate-600 drop-shadow-md">
+  <div class="container my-8 px-5 py-8 rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-slate-600 drop-shadow-md">
     {{ form|without('advanced') }}
   </div>
 {% endblock %}
