--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/breadcrumb.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/breadcrumb.html.twig
@@ -3,15 +3,19 @@
     <nav role="navigation" aria-labelledby="system-breadcrumb">
       <h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
       <ol class="flex gap-1">
-      {% for item in breadcrumb %}
-        <li>
-          {% if item.url %}
-            <a href="{{ item.url }}">{{ item.text }}<i class="fa-solid fa-angle-right"></i></a>
-          {% else %}
-            {{ item.text }}
-          {% endif %}
-        </li>
-      {% endfor %}
+        {% for item in breadcrumb %}
+          <li>
+            {% if item.url %}
+              <a href="{{ item.url }}">{{ item.text }}</a>
+            {% else %}
+              {{ item.text }}
+            {% endif %}
+
+            {% if not loop.last %}
+              <i class="fa-solid fa-angle-right"></i>
+            {% endif %}
+          </li>
+        {% endfor %}
       </ol>
     </nav>
   </div>
