--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/breadcrumb.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/breadcrumb.html.twig
@@ -3,19 +3,19 @@
     <nav role="navigation" aria-labelledby="system-breadcrumb">
       <h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
       <ol class="flex gap-1">
-      {% for item in breadcrumb %}
-        <li>
-        {% if loop.last %}
-            <a class="text-green-700 font-semibold" href="{{ item.url }}">{{ item.text }}</a>
-          {% else %}
+        {% for item in breadcrumb %}
+          <li>
             {% if item.url %}
-              <a class="font-semibold" href="{{ item.url }}">{{ item.text }}</a> <span>/</span>
+              <a class="{{ loop.last ? 'text-green-700' }} font-semibold" href="{{ item.url }}">{{ item.text }}</a>
             {% else %}
               {{ item.text }}
             {% endif %}
-          {% endif %}
-        </li>
-      {% endfor %}
+
+            {% if not loop.last %}
+              <span>/</span>
+            {% endif %}
+          </li>
+        {% endfor %}
       </ol>
     </nav>
   </div>
