--- a/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
+++ b/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
@@ -143,7 +143,7 @@ details[open] {
 }
 
 #edit-submit {
-  margin: 1rem;
+  margin: 0 1rem;
 }
 
 #edit-delete {
@@ -158,6 +158,6 @@ details[open] {
   border-width: 1px;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  margin: 1rem;
+  margin: 0 1rem;
   margin-left: 0;
 }
