--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/user.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/user.html.twig
@@ -21,14 +21,31 @@
 {% extends '@itkdev_project_theme/content-wrapper.html.twig' %}
 
 {% block title %}
-  {% set pageTitle = content.field_name %}
-  {{ parent() }}
+  <div class="inline-flex items-center">
+    <h1 class="dark:text-white inline-block">{{ content.field_name }}</h1>
+    <a href="{{ url('entity.user.edit_form', {user: user.id}) }}" class="inline-block mx-3 btn-icon bg-black text-white hover:bg-stone-700"><i class="fa-solid fa-pencil"></i></a>
+  </div>
 {% endblock %}
 
 {% block content %}
-  <article{{ attributes }}>
-    {% if content %}
-      {{- content|without('field_name') -}}
-    {% endif %}
-  </article>
+  <div class="p-5 rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-slate-600 drop-shadow-md">
+    <article{{ attributes }}>
+      {% if content %}
+        <div class="grid grid-cols-2 gap-4">
+          <div>
+            <div class="mb-3">
+              <label class="font-bold">{{ 'User mail'|t }}</label>
+              <div>
+                {{ user.mail.value }}
+              </div>
+            </div>
+            {{- content|without('field_name', 'field_image') -}}
+          </div>
+          <div class="justify-self-end">
+            {{ content.field_image }}
+          </div>
+        </div>
+      {% endif %}
+    </article>
+  </div>
 {% endblock %}
