--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/new-project-button.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/new-project-button.html.twig
@@ -1,6 +1,8 @@
-{% set path = path('node.add', {node_type: 'project'}) %}
+{% if user.hasPermission('create project content') %}
+  {% set path = path('node.add', {node_type: 'project'}) %}
 
-<a href="{{ path }}" class="font-thin bg-green-700 hover:bg-green-600 text-white py-2 px-4 rounded inline-flex items-center">
-  <i class="fa-solid fa-circle-plus mr-3"></i>
-  <span>{{ 'Create new project'|t }}</span>
-</a>
+  <a href="{{ path }}" class="font-thin bg-green-700 hover:bg-green-600 text-white py-2 px-4 rounded inline-flex items-center">
+    <i class="fa-solid fa-circle-plus mr-3"></i>
+    <span>{{ 'Create new project'|t }}</span>
+  </a>
+{% endif %}
