--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/project-track-edit-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/project-track-edit-form.html.twig
@@ -48,13 +48,15 @@
           <div class="px-4 py-4">
             {{ drupal_entity(projectTrackTool.getToolEntityType, projectTrackTool.getToolId) }}
             <div class="flex justify-end">
-              <a href="{{ url('entity.webform_submission.edit_form', {
-                webform: 'complexity_uncertainty_default',
-                webform_submission: projectTrackTool.getToolId,
-                destination: form['#action'],
-              }) }}" class="inline-block btn-primary bg-black text-white hover:bg-stone-700">
-                <i class="fa-solid fa-pencil"></i><span class="ml-3">{{ 'Edit'|t }}</span>
-              </a>
+              {% if projectTrackTool.access('update') %}
+                <a href="{{ path('entity.webform_submission.edit_form', {
+                  webform: 'complexity_uncertainty_default',
+                  webform_submission: projectTrackTool.getToolId,
+                  destination: form['#action'],
+                }) }}" class="inline-block btn-primary bg-black text-white hover:bg-stone-700">
+                  <i class="fa-solid fa-pencil"></i><span class="ml-3">{{ 'Edit'|t }}</span>
+                </a>
+              {% endif %}
             </div>
           </div>
         </div>
