--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view-table--front.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view-table--front.html.twig
@@ -45,7 +45,9 @@
 
 <div class="rounded-sm border border-stroke bg-white px-5 pb-5 pt-7.5 shadow-default dark:border-strokedark dark:bg-slate-600 sm:px-7.5 xl:col-span-8 drop-shadow-md">
   <div class="my-4">
-    <a href="{{ url('node.add', {node_type: 'project'}) }}" class="inline-block btn-primary bg-green-700 text-white hover:bg-green-500"><i class="fa-solid fa-circle-plus"></i><span class="ml-3">{{ 'Create new project'|t }}</span></a>
+    {% if user.hasPermission('create project content') %}
+      <a href="{{ path('node.add', {node_type: 'project'}) }}" class="inline-block btn-primary bg-green-700 text-white hover:bg-green-500"><i class="fa-solid fa-circle-plus"></i><span class="ml-3">{{ 'Create new project'|t }}</span></a>
+    {% endif %}
   </div>
   <div class="text-xl text-slate-500">{{ 'Latest'|t }}</div>
   <table{{ attributes.addClass(classes) }}>
