--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/field.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/field.html.twig
@@ -41,7 +41,7 @@
 {%
   set title_classes = [
     label_display == 'visually_hidden' ? 'visually-hidden',
-    'font-bold'
+    'font-bold',
   ]
 %}
 
