Added colorblock to evaluation selection

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/select.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/select.html.twig
@@ -13,7 +13,7 @@
  */
 #}
 {% apply spaceless %}
-  <select{{ attributes.addClass('w-full') }}>
+  <select{{ attributes.addClass('w-full p-3') }}>
     {% for option in options %}
       {% if option.type == 'optgroup' %}
         <optgroup label="{{ option.label }}">
