--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/select--edit-project-track-evaluation.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/select--edit-project-track-evaluation.html.twig
@@ -12,19 +12,23 @@
  * @ingroup themeable
  */
 #}
+
 {% apply spaceless %}
-  {% set colorBlock = 'h-3 w-3' %}
-  <select{{ attributes.addClass('w-full') }}>
-    {% for option in options %}
-      {% if option.type == 'optgroup' %}
-        <optgroup label="{{ option.label }}">
-          {% for sub_option in option.options %}
-            <option value="{{ sub_option.value }}"{{ sub_option.selected ? ' selected="selected"' }}>{{ sub_option.label }}</option>
-          {% endfor %}
-        </optgroup>
-      {% elseif option.type == 'option' %}
-        <option value="{{ option.value }}"{{ option.selected ? ' selected="selected"' }}><span class="{{ colorBlock }}"></span>{{ option.label }}</option>
-      {% endif %}
-    {% endfor %}
-  </select>
+  {% set colorBlock = 'h-3 w-3 absolute h-5 w-5 z-0 ml-3' %}
+  <div class="relative bg-white flex items-center">
+    <div id="selectColorBlock" class="{{ colorBlock }}"></div>
+    <select{{ attributes.addClass('w-full p-3 pl-12 relative z-1 bg-transparent') }}>
+      {% for option in options %}
+        {% if option.type == 'optgroup' %}
+          <optgroup label="{{ option.label }}">
+            {% for sub_option in option.options %}
+              <option value="{{ sub_option.value }}"{{ sub_option.selected ? ' selected="selected"' }}>{{ sub_option.label }}</option>
+            {% endfor %}
+          </optgroup>
+        {% elseif option.type == 'option' %}
+          <option value="{{ option.value }}"{{ option.selected ? ' selected="selected"' }}><span class="{{ colorBlock }}"></span>{{ option.label }}</option>
+        {% endif %}
+      {% endfor %}
+    </select>
+  </div>
 {% endapply %}
