--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table.html.twig
@@ -40,10 +40,11 @@
     sticky ? 'sticky-header',
     'table-auto',
     'w-full border-separate border-slate-400',
+    'min-w-[1000px]'
   ]
 %}
 
-<div class="rounded-sm border border-stroke bg-white px-5 pb-5 pt-7.5 shadow-default dark:border-strokedark dark:bg-slate-600 sm:px-7.5 xl:col-span-8 drop-shadow-md">
+<div class="rounded-sm border border-stroke bg-white px-5 py-5 pt-7.5 shadow-default dark:border-strokedark dark:bg-slate-600 sm:px-7.5 xl:col-span-8 drop-shadow-md overflow-x-auto">
 <table{{ attributes.addClass(classes) }}>
   {% if caption_needed %}
     <caption>
