--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view--projects.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view--projects.html.twig
@@ -60,12 +60,14 @@
   {{ exposed }}
   {{ attachment_before }}
 
-  {% if rows -%}
-    {{ rows }}
-  {% elseif empty -%}
-    {{ empty }}
-  {% endif %}
-  {{ pager }}
+  <div class="rounded-sm border border-stroke bg-white px-5 py-5 pt-7.5 shadow-default dark:border-strokedark dark:bg-slate-600 sm:px-7.5 xl:col-span-8 drop-shadow-md overflow-x-auto">
+    {% if rows -%}
+      {{ rows }}
+    {% elseif empty -%}
+      {{ empty }}
+    {% endif %}
+    {{ pager }}
+  </div>
 
   {{ attachment_after }}
   {{ more }}
