--- a/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
+++ b/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
@@ -87,6 +87,11 @@
       height: 3em;
       margin-top: 1.5em;
       margin-right: 1em;
+
+      @media (min-width: 1536px) {
+        margin-right: 0;
+      }
+
     }
   }
 
