--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/pager.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/pager.html.twig
@@ -33,68 +33,38 @@
  * @ingroup themeable
  */
 #}
+{% set actionClasses = 'px-4 py-1 border border-slate-300 h-[2.125rem] block rounded text-white' %}
 {% if items %}
   <nav class="pager my-3" role="navigation" aria-labelledby="{{ heading_id }}">
     <{{ pagination_heading_level }} id="{{ heading_id }}" class="visually-hidden">{{ 'Pagination'|t }}</{{ pagination_heading_level }}>
-    <ul class="pager__items js-pager__items flex space-x-4">
-      {# Print first item if we are not on the first page. #}
-      {% if items.first %}
-        <li class="pager__item pager__item--first btn-primary pt-1 pb-0">
-          <a href="{{ items.first.href }}" title="{{ 'Go to first page'|t }}"{{ items.first.attributes|without('href', 'title') }}>
-            <span class="visually-hidden">{{ 'First page'|t }}</span>
-            <span aria-hidden="true">{{ items.first.text|default('« First'|t) }}</span>
-          </a>
-        </li>
-      {% endif %}
+    <ul class="pager__items js-pager__items flex space-x-2 justify-center">
       {# Print previous item if we are not on the first page. #}
       {% if items.previous %}
-        <li class="pager__item pager__item--previous btn-primary pt-1 pb-0">
-          <a href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}" rel="prev"{{ items.previous.attributes|without('href', 'title', 'rel') }}>
+        <li class="pager__item pager__item--previous">
+          <a href="{{ items.previous.href }}" class="{{ actionClasses }} bg-zinc-600" title="{{ 'Go to previous page'|t }}" rel="prev"{{ items.previous.attributes|without('href', 'title', 'rel') }}>
             <span class="visually-hidden">{{ 'Previous page'|t }}</span>
-            <span aria-hidden="true">{{ items.previous.text|default('‹ Previous'|t) }}</span>
+            <span aria-hidden="true">{{ '<' }}</span>
           </a>
         </li>
+      {% else %}
+      <li class="pager__item pager__item--previous">
+        <div class="{{ actionClasses }} bg-zinc-200">{{ '<' }}</div>
+      </li>
       {% endif %}
-      {# Add an ellipsis if there are further previous pages. #}
-      {% if ellipses.previous %}
-        <li class="pager__item pager__item--ellipsis btn-primary pt-1 pb-0" role="presentation">&hellip;</li>
-      {% endif %}
-      {# Now generate the actual pager piece. #}
-      {% for key, item in items.pages %}
-        <li class="btn-primary pt-1 pb-0 pager__item{{ current == key ? ' is-active' : '' }}">
-          {% if current == key %}
-            {% set title = 'Current page'|t %}
-          {% else %}
-            {% set title = 'Go to page @key'|t({'@key': key}) %}
-          {% endif %}
-          <a href="{{ item.href }}" title="{{ title }}"{{ item.attributes|without('href', 'title') }}>
-            <span class="visually-hidden">
-              {{ 'Page'|t }}
-            </span>
-            {{- key -}}
-          </a>
-        </li>
-      {% endfor %}
-      {# Add an ellipsis if there are further next pages. #}
-      {% if ellipses.next %}
-        <li class="pager__item pager__item--ellipsis btn-primary pt-1 pb-0" role="presentation">&hellip;</li>
-      {% endif %}
+      <div>
+        <div class="px-4 py-1 border border-slate-300 h-[2.125rem] block rounded">{{ current }} / {{ items.pages|length }}</div>
+      </div>
       {# Print next item if we are not on the last page. #}
       {% if items.next %}
-        <li class="pager__item pager__item--next btn-primary pt-1 pb-0">
-          <a href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}" rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}>
+        <li class="pager__item pager__item--next">
+          <a href="{{ items.next.href }}" class="{{ actionClasses }} bg-zinc-600" title="{{ 'Go to next page'|t }}" rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}>
             <span class="visually-hidden">{{ 'Next page'|t }}</span>
-            <span aria-hidden="true">{{ items.next.text|default('Next ›'|t) }}</span>
+            <span aria-hidden="true">{{ '>' }}</span>
           </a>
         </li>
-      {% endif %}
-      {# Print last item if we are not on the last page. #}
-      {% if items.last %}
-        <li class="pager__item pager__item--last btn-primary pt-1 pb-0">
-          <a href="{{ items.last.href }}" title="{{ 'Go to last page'|t }}"{{ items.last.attributes|without('href', 'title') }}>
-            <span class="visually-hidden">{{ 'Last page'|t }}</span>
-            <span aria-hidden="true">{{ items.last.text|default('Last »'|t) }}</span>
-          </a>
+      {% else %}
+        <li class="pager__item pager__item--previous">
+          <div class="{{ actionClasses }} bg-zinc-200">{{ '>' }}</div>
         </li>
       {% endif %}
     </ul>
