Added theming for messages

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/page--4xx.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/page--4xx.html.twig
@@ -52,11 +52,12 @@
     <div class="flex h-screen overflow-hidden">
       <div class="relative flex flex-1 flex-col overflow-y-auto overflow-x-hidden">
         <div class="content-wrapper container mx-auto my-16">
+          <div class="my-3">{{ page.header }}</div>
           {% if logged_in %}
             {{ page.content }}
           {% else %}
-            <div class="my-6">{{ page.content }}</div>
-            <div class="my-6">{{ drupal_block('user_login_block') }}</div>
+            <div class="my-6 max-w-screen-2xl px-4 md:px-6 2xl:px-10">{{ page.content }}</div>
+            <div class="my-6 max-w-screen-2xl px-4 md:px-6 2xl:px-10">{{ drupal_block('user_login_block') }}</div>
           {% endif %}
         </div>
       </div>
