Applied coding standards

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig
@@ -40,7 +40,7 @@
     sticky ? 'sticky-header',
     'table-auto',
     'w-full border-separate border-slate-400',
-    'min-w-[1000px]'
+    'min-w-[1000px]',
   ]
 %}
 
