--- a/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
+++ b/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
@@ -1,3 +1,5 @@
+@import "../../itkdev_base_theme/css/choices.css";
+
 /* Project specific styles */
 :root {
     --theme-primary: #fff;
@@ -159,4 +161,8 @@ details[open] {
   padding-bottom: 0.5rem;
   margin: 0 1rem;
   margin-left: 0;
+}
+
+.custom-choices-css {
+
 }
