--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/form-element.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/form-element.html.twig
@@ -27,7 +27,7 @@
     <span class="field-prefix">{{ prefix }}</span>
   {% endif %}
   {% if description.content and (description_display == 'before' or type == 'radio') %}
-    <div{{ description.attributes }}>
+    <div{{ description.attributes.addClass(description_classes) }}>
       {{ description.content }}
     </div>
   {% endif %}
