--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig
@@ -59,7 +59,7 @@
     </header>
     <div class="flex justify-between px-4 py-4">
       <div>{{ 'Project eveluation of whether it should be used'|t }}</div>
-      <div><a class="underline" href="/">{{ 'See project report'|t }}</a></div>
+      <div><a class="underline" href="{{ path('ai_screening_reports.project', {node: node.id}) }}">{{ 'See project report'|t }}</a></div>
     </div>
   </div>
   <div class="grid grid-cols-2 gap-4">
