--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/page--4xx.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/page--4xx.html.twig
@@ -51,6 +51,7 @@
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
     <div class="flex h-screen overflow-hidden">
       <div class="relative flex flex-1 flex-col overflow-y-auto overflow-x-hidden">
+        <div class="my-3">{{ page.header }}</div>
         <div class="content-wrapper container mx-auto my-16">
           {% if logged_in %}
             {{ page.content }}
