--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/form-element.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/form-element.html.twig
@@ -11,6 +11,7 @@
     errors ? 'form-item--error',
     'mb-3 md:mb-5',
     type == 'radio' ? 'flex items-center gap-3 cursor-pointer',
+    type == 'checkbox' ? 'flex items-center gap-3',
   ]
 %}
 {%
