--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig
@@ -25,10 +25,10 @@
 {% block content %}
   {%
     set evaluationColors = {
-    'none':'bg-slate-300',
-    'approved':'bg-green-700',
-    'undecided':'bg-yellow-700',
-    'refused':'bg-red-700'
+    none: 'bg-slate-300',
+    approved: 'bg-green-700',
+    undecided: 'bg-yellow-700',
+    refused: 'bg-red-700',
   }
   %}
   <div class="container my-8 px-5">
