--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-submission-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-submission-form.html.twig
@@ -23,6 +23,6 @@
     </div>
   {% endif %}
   <div class="bg-primary text-primary p-3 md:p-5 m-3 md:m-5 shadow-md max-w-xl">
-    {{ form|without('information', 'progress') }}
+    {{ form|without('information', 'progress', 'navigation') }}
   </div>
 {% endblock %}
