--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig
@@ -14,6 +14,9 @@
 
 {% block content %}
   <div class="p-5 rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-slate-600 drop-shadow-md">
-    <div style="width: 100%;"><canvas id="chart"></canvas></div>
+    {% for key, track in data.projectTracks %}
+      <h3>{{ track.entity.label }}</h3>
+      <div class="w-full mb-16"><canvas id="track-type-{{ key }}" class="chart" track-id="{{ key }}"></canvas></div>
+    {% endfor %}
   </div>
 {% endblock %}
