--- a/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
+++ b/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
@@ -112,7 +112,7 @@
       margin-right: 1em;
 
       @media (min-width: 1536px) {
-        margin-right: 0;
+        margin-right: .5em;
       }
 
     }
@@ -202,4 +202,14 @@ details[open] {
 
 input.error {
   border-color: var(--theme-error-border);
+}
+
+table td {
+  text-align: center;
+  width: 10%;
+}
+
+table td:first-child {
+  text-align: Left;
+  width: 50%;
 }
