--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig
@@ -131,4 +131,9 @@
       {% endfor %}
     </tbody>
   </table>
+  <div class="mt-8 flex justify-end">
+    <a href="{{ path('view.projects.page_1') }}" class="bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded inline-flex items-center">
+      <span>{{ 'Show all projects'|t }}</span>
+    </a>
+  </div>
 </div>
