--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project.html.twig
@@ -37,5 +37,9 @@
         </div>
       </div>
     {% endfor %}
+
+    <div>
+      <a href="javascript:history.back()" class="inline-block btn-primary bg-black text-white hover:bg-stone-700">{{ 'Go Back'|t }}</a>
+    </div>
   </div>
 {% endblock %}
