--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
@@ -13,7 +13,7 @@
 
 {% set evaluation = project_status.track_evaluation|default([0]) %}
 
-<div class="flex flex-col gap-1 w-20">
+<div class="flex flex-col gap-1 w-20 align-center">
     <div class="w-full h-2
         {% if 'none' in evaluation %}
           bg-zinc-400
