--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/select--ai-screening-static-select.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/select--ai-screening-static-select.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Default theme implementation for a select element.
+ * Customized implementation of a select element.
  *
  * Available variables:
  * - attributes: HTML attributes for the <select> tag.
