Update bubble graph

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig
@@ -39,6 +39,7 @@
     responsive ? 'responsive-enabled',
     sticky ? 'sticky-header',
     'table-auto',
+    'projects-table',
     'w-full border-separate border-slate-400',
     'min-w-[1000px]',
   ]
