--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-weighted-textarea.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-weighted-textarea.html.twig
@@ -19,5 +19,5 @@
   {% if element['#help'] %}
     <div class="font-thin mb-2">( {{ element['#help']|striptags }} )</div>
   {% endif %}
-  <div class="line-clamp-6">{{ value }}</div>
+  <div class="line-clamp-6 w-6/12">{{ value }}</div>
 </div>
