--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig
@@ -67,27 +67,31 @@
       </div>
     </div>
   </div>
-  <div class="grid md:grid-cols-2 grid-cols-1 gap-4">
-    {% for key, projectTrackTool in form['#project_tools'] %}
-      <div class="tool-wrapper">
-        <div class="container bg-white dark:bg-secondary my-4 drop-shadow-md">
-          {{ include('@itkdev_project_theme/components/project-track-tool-header.html.twig') }}
-          <div class="px-4 py-4">
-            {{ drupal_entity(projectTrackTool.getToolEntityType, projectTrackTool.getToolId) }}
-            <div class="flex justify-end">
-              {% if projectTrackTool.access('update') %}
-                <a href="{{ path('entity.webform_submission.edit_form', {
-                  webform: 'complexity_uncertainty_default',
-                  webform_submission: projectTrackTool.getToolId,
-                  destination: form['#action'],
-                }) }}" class="inline-block btn-primary bg-black text-white hover:bg-stone-700">
-                  <i class="fa-solid fa-pencil"></i><span class="ml-3">{{ 'Edit'|t }}</span>
-                </a>
-              {% endif %}
+
+  <div>
+    <div class="grid grid-cols-1 gap-4">
+      {% set defaultOpen = form['#project_tools']|length > 1 ? false : true %}
+      {% for key, projectTrackTool in form['#project_tools'] %}
+        <div class="tool-wrapper" x-data="{{ defaultOpen ? '{open: true}' : '{open: false}' }}">
+          <div class="container bg-white dark:bg-secondary my-4 drop-shadow-md">
+            {{ include('@itkdev_project_theme/components/project-track-tool-header.html.twig') }}
+            <div class="px-4 py-4" x-show="open" x-transition>
+              {{ drupal_entity(projectTrackTool.getToolEntityType, projectTrackTool.getToolId) }}
+              <div class="flex justify-end">
+                {% if projectTrackTool.access('update') %}
+                  <a href="{{ path('entity.webform_submission.edit_form', {
+                    webform: 'complexity_uncertainty_default',
+                    webform_submission: projectTrackTool.getToolId,
+                    destination: form['#action'],
+                  }) }}" class="inline-block btn-primary bg-black text-white hover:bg-stone-700">
+                    <i class="fa-solid fa-pencil"></i><span class="ml-3">{{ 'Edit'|t }}</span>
+                  </a>
+                {% endif %}
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    {% endfor %}
+      {% endfor %}
+    </div>
   </div>
 {% endblock %}
