--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html.html.twig
@@ -21,5 +21,5 @@
   {% endif %}
 
   {% set value = value['#markup'] is same as ('{Empty}') ? 'None'|t : value %}
-  <div class="line-clamp-6">{{ value }}</div>
+  <div class="line-clamp-6 w-full xl:w-[800px]">{{ value }}</div>
 </div>
