--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/reportsMultiProjectTable.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/reportsMultiProjectTable.html.twig
@@ -21,8 +21,8 @@
           </td>
           <td class="text-left">
             <div class="relative bg-white flex items-center my-1">
-              <div class="h-5 w-5 z-0 mr-3 {{ evaluationClasses[trackEntity.entity.getProjectTrackEvaluation(TRUE)] }}"></div>
-              <div>{{ evaluationOptions[trackEntity.entity.getProjectTrackEvaluation(TRUE)] }}</div>
+              <div class="h-5 w-5 z-0 mr-3 {{ evaluationClasses[trackEntity.entity.getProjectTrackEvaluation(true)] }}"></div>
+              <div>{{ evaluationOptions[trackEntity.entity.getProjectTrackEvaluation(true)] }}</div>
             </div>
           </td>
           <td class="text-left">
