--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig
@@ -77,7 +77,7 @@
             </div>
           </div>
           {% if projectCount > 1 %}
-            {% include '@itkdev_project_theme/components/reportsMultiProjectTable.html.twig' %}
+            {{ include('@itkdev_project_theme/components/reportsMultiProjectTable.html.twig') }}
           {% endif %}
         </div>
       {% endif %}
